# rhc22-badge

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-script.sh  moca_schedule_json.txt  partitions.csv  platformio.ini  sdkconfig.rhc22-badge  www-build.sh
components/esp32-button/: CMakeLists.txt
components/esp32-button/src/: button.c
components/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.my
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_spi_conf.h
data/: default.json  schedule.json
data/www/: index.html  style.css  tetris.html
data/www/css/: tetris.css
data/www/js/: client.js  helpers.js  index.js  paginator.js  tetris.js  webaudio-tinysynth.js
hardware/: dragon.kicad_pcb  dragon.kicad_pro  dragon.kicad_sch
main/: CMakeLists.txt  main.c
main/badge/: badge.c  badge.h  bt.c  bt.h  httpd.c  httpd.h  led.c  led.h  snake.c  snake.h  sync.c  sync.h  ui.c  ui.h  version.c  wifi.c  wifi.h
main/badge/common/: img_logo.c  img_radar.c  palla_otto_0.c  palla_otto_1.c  palla_otto_2.c  palla_otto_3.c  palla_otto_4.c  palla_otto_7.c  palla_otto_8.c  storage.c  storage.h
public/: .gitignore  index.html  style.css  style.css.map  style.scss  tetris.html  tetris.mid
public/css/: toastify.min.css
public/js/: client.js  helpers.js  index.js  paginator.js  tetris.js  toastify.js
